United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6707273 TrayIcon does not support 8-bit alpha channel in Windows XP
6707273 : TrayIcon does not support 8-bit alpha channel in Windows XP

Details
Type:
Bug
Submit Date:
2008-05-27
Status:
Resolved
Updated Date:
2013-04-20
Project Name:
JDK
Resolved Date:
2009-11-25
Component:
client-libs
OS:
windows_xp,windows
Sub-Component:
java.awt
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
6,7
Fixed Versions:
7

Related Reports
Backport:
Backport:
Backport:
Duplicate:

Sub Tasks

Description
FULL PRODUCT VERSION :
java version "1.6.0_10-beta"
Java(TM) SE Runtime Environment (build 1.6.0_10-beta-b23)
Java HotSpot(TM) Client VM (build 11.0-b11, mixed mode, sharing)

Note: this bug is also affecting 1.6.0_06


ADDITIONAL OS VERSION INFORMATION :
Windows XP SP2

A DESCRIPTION OF THE PROBLEM :
The TrayIcon class only supports 1-bit transparency in Windows XP. It may be affecting Vista as well. Please see this forum thread for further information:

http://forums.java.net/jive/thread.jspa?threadID=25489

It seems as though the bug as already been fixed in JDIC, but for some reason this fix has not been applied in either 1.6.0_06 or 1.6.0_10-beta-b23

https://jdic.dev.java.net/issues/show_bug.cgi?id=350





STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Create an image with 8-bit alpha channel transparency and add it to the System Tray.

EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Varying alpha values should result in varying levels of transparency.
ACTUAL -
An alpha value of 0 results in a fully transparent pixel, but an alpha value of greater than 0 results in a fully opaque pixel.

REPRODUCIBILITY :
This bug can be reproduced always.

                                    

Comments
EVALUATION

Fixed.
                                     
2009-10-22



Hardware and Software, Engineered to Work Together