6707273: TrayIcon does not support 8-bit alpha channel in Windows XP

Reviewed-by: uta, ant